@@ -1,6 +1,12 @@
 # ChangeLog for games-fps/postal2mp-demo
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/postal2mp-demo/ChangeLog,v 1.12 2008/02/29 19:18:21 carlo Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-fps/postal2mp-demo/ChangeLog,v 1.13 2009/09/26 11:28:44 nyhm Exp $
+
+*postal2mp-demo-1407-r1 (26 Sep 2009)
+
+  26 Sep 2009; Tristan Heaven <nyhm@gentoo.org>
+  +postal2mp-demo-1407-r1.ebuild:
+  Use system libraries instead of the bundled ones, bug #248895
 
   29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> postal2mp-demo-1407.ebuild:
   Remove icon extension from desktop entry to match Icon Theme Specification.
